--- a/CollegeManagement/src/main/resources/application.properties
+++ b/CollegeManagement/src/main/resources/application.properties
@@ -1,10 +1,7 @@
 spring.application.name=CollegeManagement
 
-spring.datasource.url=jdbc:mysql://localhost:3306/CollegeManagement
+spring.datasource.url=jdbc:mysql://root:OltUUWAkNbhkJgXTTpawYuSHMukeWpBf@gondola.proxy.rlwy.net:49063/railway
 
-spring.datasource.username=root
-
-spring.datasource.password=tejas
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
